--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.97.0",
+    "@react-three/fiber": "^8.15.16",
+    "@types/three": "^0.161.2",
+    "next": "14.1.0",
+    "prettier": "^3.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "typescript": "^5",
